Add temp support

--- a/telegraf/telegraf/telegraf.conf
+++ b/telegraf/telegraf/telegraf.conf
@@ -231,7 +231,9 @@
   ## Uncomment to remove deprecated metrics.
   # fielddrop = ["uptime_format"]
 
-# # Read metrics about temperature
-[[inputs.temp]]
-#   # no configuration
+[[inputs.file]]
+  files = ["/sys/class/thermal/thermal_zone0/temp"]
+  name_override = "cpu_temp"
+  data_format = "value"
+  data_type = "integer"
 
