--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,15 @@ branches:
     - master
 
 install:
-  - cd unfsd
-  - docker build -t cwilko/arm-utils:unfsd .
-  - cd ../telegraf
-  - docker build --build-arg VERSION=1.13 -t cwilko/arm-utils:telegraf .
+  - cd arm/unfsd
+  - docker build -t cwilko/edge-utils:unfsd .
+  - cd ../arm/telegraf
+  - docker build --build-arg VERSION=1.14 -t cwilko/edge-utils:telegraf-arm .
+  - cd ../mips/telegraf
+  - docker build --build-arg VERSION=1.14 -t cwilko/edge-utils:telegraf-mips.
 
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push cwilko/arm-utils:unfsd
-  - docker push cwilko/arm-utils:telegraf
+  - docker push cwilko/edge-utils:unfsd
+  - docker push cwilko/edge-utils:telegraf-arm
+  - docker push cwilko/edge-utils:telegraf-mips
