standby status monitoring

--- a/mips/telegraf/telegraf/telegraf.conf
+++ b/mips/telegraf/telegraf/telegraf.conf
@@ -91,7 +91,7 @@
   # logfile_rotation_max_archives = 5
 
   ## Override default hostname, if empty use os.Hostname()
-  hostname = "Satelite-TV"
+  hostname = "Satellite-TV"
   ## If set to true, do no set the "host" tag in the telegraf agent.
   omit_hostname = false
 
@@ -230,4 +230,13 @@
 [[inputs.system]]
   ## Uncomment to remove deprecated metrics.
   # fielddrop = ["uptime_format"]
+
+## CUSTOM METRICS ##
+
+## Check ZGemma standby status
+[[inputs.exec]]
+  commands = ["if [ 'on' == `cat /proc/stb/power/standbyled` ]; then echo '1'; else echo '0'; fi"]
+  name_override = "standby"
+  data_format = "value"
+  data_type = "integer"
 
