standby status monitoring

--- a/mips/telegraf/telegraf/telegraf.conf
+++ b/mips/telegraf/telegraf/telegraf.conf
@@ -235,8 +235,7 @@
 
 ## Check ZGemma standby status
 [[inputs.exec]]
-  commands = ["if [ 'on' == `cat /proc/stb/power/standbyled` ]; then echo '1'; else echo '0'; fi"]
+  commands = ['''bash -c "if [ 'on' == `cat /proc/stb/power/standbyled` ]; then echo '1'; else echo '0'; fi"''']
   name_override = "standby"
   data_format = "value"
   data_type = "integer"
-
